started work on channels and messages

--- a/Discord.cs.csproj
+++ b/Discord.cs.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="Discord.Anarchy" Version="0.8.3.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Resources\blank_server_icon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
