--- a/.editorconfig
+++ b/.editorconfig
@@ -75,4 +75,5 @@ dotnet_style_null_propagation = true:suggestion
 dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
 dotnet_style_prefer_auto_properties = true:silent
 dotnet_style_object_initializer = true:suggestion
-dotnet_style_collection_initializer = true:suggestion
+dotnet_style_collection_initializer = false:suggestion
+dotnet_style_prefer_collection_expression = never:suggestion
