--- a/Discord.cs.csproj
+++ b/Discord.cs.csproj
@@ -16,6 +16,9 @@
     <None Update="Resources\blank_server_icon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\blank_user_icon.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
